--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
 	"description": "Robust IAAI auction links crawler using Playwright for the Apify platform",
 	"main": "main.js",
 	"scripts": {
-		"start": "node main.js"
+		"start": "node main.js",
+		"prisma:generate": "prisma generate",
+		"prisma:push": "prisma db push",
+		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.6.0",
 		"apify": "^3.1.0",
 		"crawlee": "^3.5.0",
 		"playwright": "*"
+	},
+	"devDependencies": {
+		"prisma": "^5.6.0"
 	},
 	"engines": {
 		"node": ">=18.0.0"
