--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,12 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Prisma
+prisma/migrations/
+*.db
+*.db-journal
+dev.db*
+
 # Local development, testing & temporary files
 test-output/
 debug/
@@ -52,3 +58,8 @@ videos/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Package managers (optional - uncomment if using these package managers)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
