--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,22 @@
 # Database Configuration
-# Update this with your actual database connection string
-# PostgreSQL example:
+# The scraper supports multiple database URL environment variables.
+# Set any one of the following:
+
+# Primary database URL (recommended)
 DATABASE_URL="postgresql://username:password@localhost:5432/copart_api?schema=public"
+
+# Alternative database URL variables (any of these will work)
+DATABASE_POSTGRES_URL="postgresql://username:password@localhost:5432/copart_api?schema=public"
+DATABASE_PRISMA_DATABASE_URL="postgresql://username:password@localhost:5432/copart_api?schema=public"
+DATABASE_DATABASE_URL="postgresql://username:password@localhost:5432/copart_api?schema=public"
+
+# Examples for different database types:
 
 # MySQL example:
 # DATABASE_URL="mysql://username:password@localhost:3306/copart_api"
 
 # SQLite example (for development):
 # DATABASE_URL="file:./dev.db"
+
+# Environment setting
+NODE_ENV=development
