--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "node main.js",
 		"prisma:generate": "prisma generate",
 		"prisma:push": "prisma db push",
-		"prisma:studio": "prisma studio"
+		"prisma:studio": "prisma studio",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@prisma/client": "^5.6.0",
